--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,31 @@
 body {
   min-height: 2000px;
-  padding-top: 70px;
+  margin-top: 80px;
 }
 
 nav {
-  height: 90px
+  height: 80px
 }
 
 nav .container{
-  margin-top: 17px;
+  margin-top: 15px;
 }
 
 .welcome {
+	background-image: url("../images/welcome.jpg");
+	border: 1px #666 solid;
+	height: 430px;
+}
 
+.welcome p {
+	width: 320px;
+	height: 150px;
+	padding: 40px 20px 20px 20px;
+	text-align: center;
+	position: relative;
+	top: 200px;
+	left: 40px;
+	background-color: #000;
+	color: #fff;
+	opacity: 0.9;
 }
